websvr-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websvr
  namespace: websvr
  labels:
    app: web
spec:
  selector:
    matchLabels:
      app: web
  replicas: 4
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web-server
        image: nginx:1.21.6-alpine
        ports:
        - containerPort: 80
          name: http
