websvr-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: websvr-svc
  namespace: websvr
spec:
  selector:
    app: web
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
